Add .env files to gitignore for security - Ignore all .env files to prevent committing sensitive data - Keep .env.example files as templates - Protect database passwords, API keys, and other secrets

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@ temp/
 .DS_Store
 Thumbs.db
 
+# Environment variables (sensitive data)
+.env
+.env.*
+!.env.example
+
 # Secrets (jangan commit!)
 secrets/
 *.key
