--- a/docker/profiles/database.yml
+++ b/docker/profiles/database.yml
@@ -40,7 +40,7 @@ services:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./config/postgresql.conf:/etc/postgresql/postgresql.conf:ro
+      - ../config/postgresql.conf:/etc/postgresql/postgresql.conf:ro
     deploy:
       resources:
         limits:
@@ -66,7 +66,7 @@ services:
       - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
-      - ./config/redis.conf:/usr/local/etc/redis/redis.conf:ro
+      - ../config/redis.conf:/usr/local/etc/redis/redis.conf:ro
     deploy:
       resources:
         limits:
