--- a/docker/profiles/monitoring.yml
+++ b/docker/profiles/monitoring.yml
@@ -43,8 +43,8 @@ services:
       - "${PROMETHEUS_PORT:-9090}:9090"
     volumes:
       - prometheus_data:/prometheus
-      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./config/rules:/etc/prometheus/rules:ro
+      - /home/mfaizfatah-nlite/infra-cluster/docker/config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - /home/mfaizfatah-nlite/infra-cluster/docker/config/rules:/etc/prometheus/rules:ro
     deploy:
       resources:
         limits:
@@ -79,8 +79,8 @@ services:
       - "${GRAFANA_PORT:-3000}:3000"
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./config/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
-      - ./config/grafana/datasources:/etc/grafana/provisioning/datasources:ro
+      - /home/mfaizfatah-nlite/infra-cluster/docker/config/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - /home/mfaizfatah-nlite/infra-cluster/docker/config/grafana/datasources:/etc/grafana/provisioning/datasources:ro
     depends_on:
       - prometheus
     deploy:
