--- a/docker/services/monitoring-exporters.yml
+++ b/docker/services/monitoring-exporters.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # Monitoring exporters services for system monitoring
 networks:
   infra-network:
@@ -64,8 +62,9 @@ services:
     environment:
       # Support both regular and database profile env vars
       DATA_SOURCE_NAME: "postgresql://${DB_USER:-${POSTGRES_USER:-postgres}}:${DB_PASSWORD:-${POSTGRES_PASSWORD:-changeme123}}@postgresql:5432/${DB_NAME:-${POSTGRES_DB:-myapp}}?sslmode=disable"
-    depends_on:
-      - postgresql
+    # Remove depends_on since postgresql service is not in this file
+    # depends_on:
+    #   - postgresql
     # Resource limits untuk VPS 1GB RAM
     deploy:
       resources:
@@ -86,8 +85,9 @@ services:
     environment:
       REDIS_ADDR: "redis://redis:6379"
       REDIS_PASSWORD: "${REDIS_PASSWORD:-redis123}"
-    depends_on:
-      - redis
+    # Remove depends_on since redis service is not in this file
+    # depends_on:
+    #   - redis
     # Resource limits untuk VPS 1GB RAM
     deploy:
       resources:
